JSAI/error/src/test/resources/base/precision_constant_set.js
var x = 3;
print(x)
x
/*** EXPECT: 3 ***/
